<resources>
    <string name="app_name">KnockNock</string>

    <plurals name="day_count_string">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="hour_count_string">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="min_count_string">
        <item quantity="one">%d min ago</item>
        <item quantity="other">%d mins ago</item>
    </plurals>
    <plurals name="second_count_string">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>

    <string name="just_now">Just now</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="hour">hr</string>

    <string name="invite">Invite</string>
    <string name="send_reminder">Send Reminder</string>
    <string name="joined">Joined</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="create_username">Create your username</string>
    <string name="add_photo">Add a photo</string>
    <string name="change_photo">Change your photo?</string>
    <string name="change_username">Change your username?</string>
    <string name="correct_full_name">Correct your full name?</string>
    <string name="fullname_footer">People use real names on KnockNock :) Thnx!</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="username">\@username</string>
    <string name="enter_phone_number">Enter your phone #</string>
    <string name="t_c_and_privacy_policy"><![CDATA[By entering your number, you\'re agreeing to our <font color=\'#FC5237\'><a style="text-decoration:none" href="https://zoopzam.com/terms-condition">Terms of Service</a></font> and <font color=\'#FC5237\'><a style="text-decoration:none" href="https://zoopzam.com/privacy-policy">Privacy Policy</a></font>. Thanks!]]></string>
    <string name="enter_the_code_we_just_texted_you">Enter the code we\njust texted you</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="pause_notifications">Pause Notifications</string>
    <string name="knock_tone">Knock Tone</string>
    <string name="knock_back">Knock back</string>

</resources>